TABLE book added

--- a/src/test1.in
+++ b/src/test1.in
@@ -1,10 +1,22 @@
+
 register
 root
 123
+
 register
 tom
 321
+
 register
 tom
 233
 
+newbook
+123
+1233
+123
+4014
+1
+1.2
+'hardcover'
+'fiction'
