gen.cpp updated , interesting book names

--- a/src/test1.in
+++ b/src/test1.in
@@ -1,221 +1,229 @@
 register
 root
 123
-Tom
-1
-1
+God
+None
+49191036085
+
 register
-1
-1
-1
-1
-1
+Mann11
+8264448572
+Mann
+None
+86308267370
+
 register
-2
-2
-2
-1
-1
+Batman65
+9424732906
+Batman
+None
+56616814212
+
 register
-3
-3
-3
-1
-1
+Joker19
+6229070424
+Joker
+None
+15837684212
+
 
 login
 root
 123
 newbook
-001
-00001
-Devil
-1984
-12
-12.5
+2364610829463
+Batman's Weak Love
+Mocker,Joker,Batman
+Devines
+2548
+71
+23.6
 softcover
-Sex
+Peace
 newbook
-002
-00002
-Devil
-1984
-12
-12.5
+9026663599962
+Mocker's Numerous Relief
+Jun
+Devines
+3625
+41
+48
 softcover
-Sex
+Dinner
 newbook
-003
-00003
-Devil
-1984
-12
-12.5
+5666694578089
+Archer's Interesting Peace
+Raper
+Devils
+3989
+84
+34.7
 softcover
-Sex
+Keys
 
 login
-1
-1
+Mann11
+8264448572
 feedback
-001
+2364610829463
+2
+
+feedback
+9026663599962
+6
+
+feedback
+5666694578089
 10
-Rand
-feedback
-002
-2
-Rand
-feedback
-003
-1
-Rand
+
 login
-2
-2
+Batman65
+9424732906
 feedback
-001
-1
-Rand
-feedback
-002
-3
-Rand
-feedback
-003
-0
-Rand
-login
-3
-3
-feedback
-001
-10
-Rand
-feedback
-002
+2364610829463
 5
-Rand
+
 feedback
-003
-9
-Rand
+9026663599962
+0
+
+feedback
+5666694578089
+5
 
 login
-1
-1
+Joker19
+6229070424
+feedback
+2364610829463
+4
+
+feedback
+9026663599962
+4
+
+feedback
+5666694578089
+4
+
+
+login
+Mann11
+8264448572
 rate
+Batman65
+2364610829463
 2
-001
+rate
+Batman65
+9026663599962
+0
+rate
+Batman65
+5666694578089
+0
+rate
+Joker19
+2364610829463
 2
 rate
-2
-002
+Joker19
+9026663599962
 1
 rate
-2
-003
-1
-rate
-3
-001
-2
-rate
-3
-002
-1
-rate
-3
-003
+Joker19
+5666694578089
 2
 login
-2
-2
+Batman65
+9424732906
 rate
-1
-001
-1
-rate
-1
-002
+Mann11
+2364610829463
 2
 rate
+Mann11
+9026663599962
 1
-003
-1
 rate
-3
-001
-2
-rate
-3
-002
-2
-rate
-3
-003
+Mann11
+5666694578089
 0
+rate
+Joker19
+2364610829463
+0
+rate
+Joker19
+9026663599962
+2
+rate
+Joker19
+5666694578089
+1
 login
-3
-3
+Joker19
+6229070424
 rate
-1
-001
-0
-rate
-1
-002
-0
-rate
-1
-003
-1
-rate
+Mann11
+2364610829463
 2
-001
+rate
+Mann11
+9026663599962
+2
+rate
+Mann11
+5666694578089
 0
 rate
-2
-002
+Batman65
+2364610829463
+1
+rate
+Batman65
+9026663599962
 0
 rate
-2
-003
+Batman65
+5666694578089
 1
 
 login
-1
-1
+Mann11
+8264448572
 order
-001
-1
-order
-002
+2364610829463
 2
 order
-003
+9026663599962
+1
+order
+5666694578089
 2
 login
-2
-2
+Batman65
+9424732906
 order
-001
+2364610829463
 1
 order
-002
-1
+9026663599962
+2
 order
-003
+5666694578089
 2
 login
-3
-3
+Joker19
+6229070424
 order
-001
-2
-order
-002
+2364610829463
 1
 order
-003
+9026663599962
 2
+order
+5666694578089
+2
+
 0
